<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Weather</string>
    <string name="nsw">NSW</string>
    <string name="nsw_sydney">Sydney</string>
    <string name="nsw_all">All NSW</string>
    <string name="nsw_coastal">Coastal</string>
    <string name="vic">NSW</string>
    <string name="vic_melbourne">Melbourne</string>
    <string name="vic_all">All Victoria</string>
    <string name="vic_coastal">Coastal</string>
    <string name="title_activity_home">Home</string>
    <string name="action_settings">Settings</string>

</resources>
